<resources>
    <string name="app_name">Grab&amp;Go</string>
    <string name="loading">Loading...</string>
    <string name="splash_text">Food is just a click away</string>
    <string name="GoogleAPIKey">AIzaSyA5kFisyX5mJVo6u7K5IrKfsGySVTLJcDI</string>
    <string name="location">Location</string>
    <string name="enter_mobileno">Enter mobile number</string>
    <string name="countryCodeNONotValid"> Country Code Not Valid </string>
    <string name="please_enter_valid_number">Please enter a valid number</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'YIN\'.</string>
    <string name="permission_required_toast">Location permission is required</string>
    <string name="login_your_account">Please login your account</string>
    <string name="login">Login</string>
    <string name="login_with_otp">Login with OTP</string>
    <string name="not_a_member">Not a member? </string>
    <string name="register_here">Register here</string>
    <string name="type_here">Type here</string>
    <string name="enter_mobile_number">Enter your mobile number</string>
    <string name="enter_password">Enter password</string>
    <string name="please_verify_otp">Please verify</string>
    <string name="text_otp_verify">We’ve sent an OTP to you mobile number, Please Enter to correct code to continue.</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resendotp">Resend OTP in :</string>
    <string name="login_with_password">Login with password</string>
    <string name="please_enter_mobile_no">Please enter your mobile no.</string>
    <string name="continu">Continue</string>
    <string name="fill_the_form">Please Fill the form</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="email_id">Email ID</string>
    <string name="enter_emailId">Enter email ID</string>
    <string name="vehicle_no">Vehicle number</string>
    <string name="enter_vehicle_no">Enter your car/bike number(Optional)</string>
    <string name="choose_password">Choose password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="choose_passow_hint">Type your password(min 8 characters)</string>
    <string name="confirm_password_hint">Repeat your password</string>
    <string name="i_agree_text"><![CDATA[I agree with terms & conditions and privacy policy]]></string>
    <string name="register">Register</string>
    <string name="gender">Gender</string>
    <string name="select_gender">Select Gender (optional)</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_text">Please choose a new password to login your account. Min 8 characters are required.</string>
    <string name="enter_new_password">Choose new password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="not_available">Not available</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="guest">Guest</string>
    <string name="NetworkError">No Network Available</string>
    <string name="ServerError">Server Response Timeout</string>
    <string name="ServerInternalError">Server Internal Error</string>
    <string name="AuthFailedError">Server Authentication Failed</string>
    <string name="ParseError">Parsing Error</string>
    <string name="NoConnectionError">No Connection available to Host</string>
    <string name="TimeOutError">Server Timeout Error</string>
    <string name="ErrorResponseData">Error Response Data</string>
    <string name="UnknownError">Unknown Error Response</string>
    <string name="UnexpectedResponse">Unexpected response</string>
    <string name="appExitText">Do you really want to exit ?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="not_valid_model">Not a valid Model</string>
    <string name="search_food_restaurant">Search food and restaurants</string>
    <string name="top_restaurant_near_you">Top restaurants near you</string>
    <string name="view_all">View all</string>
    <string name="popular_restaurant_near_you">Popular restaurants near you</string>
    <string name="all">All</string>
    <string name="server_fast">Serve Fast</string>
    <string name="mc_Donalds">McDonald’s</string>
    <string name="kms">kms</string>
    <string name="burger">Burger</string>
    <string name="north_indian">North Indian</string>
    <string name="apply">Apply</string>
    <string name="close">Close</string>
    <string name="search_restaurant_by_location">Search restaurants by location</string>
    <string name="yourlocation">My current location</string>
    <string name="yourdestination">Search your destination</string>
    <string name="view_menu">View menu</string>
    <string name="preparation_time">Est. Preparation Time :</string>
    <string name="full_menu">Full Menu</string>
    <string name="must_try">Must Try</string>
    <string name="add">Add</string>
    <string name="view_cart">View Cart</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="add_instruction">Add instruction for the restaurants</string>
    <string name="enter_instruction">Enter your request here.</string>
    <string name="apply_coupon">Apply coupon</string>
    <string name="enter_coupon_code">Enter coupon code</string>
    <string name="bill_details">Bill Details</string>
    <string name="item_price">Item Price</string>
    <string name="packing_charges">Packing charges</string>
    <string name="sub_total">Subtotal</string>
    <string name="coupon">Coupon</string>
    <string name="vat">Vat@15%</string>
    <string name="select_payment_method">Select payment method</string>
    <string name="credit_Debit_card">Credit/Debit card</string>
    <string name="add_new_card">Add new card</string>
    <string name="net_banking">Net Banking</string>
    <string name="select_your_bank">Select your bank</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="cash_on_delivery">Pay at the restaurant at the time of pickup</string>
    <string name="pay_with_cash">Pay with cash</string>
    <string name="cvv">CVV</string>
    <string name="pay_sar">Pay SAR 450</string>
    <string name="rate_your_experience">Rate your experience</string>
    <string name="enter_comment">Enter comments</string>
    <string name="enter_here">Enter here (optional)</string>
    <string name="submit">Submit</string>
    <string name="edit_profile">Edit profile</string>
    <string name="favorite_restaurants">Favorite restaurants</string>
    <string name="previous_orders">Previous orders</string>
    <string name="view_more">View more</string>
    <string name="logout">Logout account</string>
    <string name="re_order">Re-order</string>
    <string name="mobile_no">Mobile no.</string>
    <string name="number">+971 9797 271212</string>
    <string name="enter_emailId_edit">Enter Email Id</string>
    <string name="save">Save</string>
    <string name="emprty_cart">Your cart is empty</string>
    <string name="emprty_cart_message">Awesome restaurant are around you, Let’s grab a bite.</string>
    <string name="view_nearby_restaurants">View nearby restaurants</string>
    <string name="order_confirmed">Order confirmed</string>
    <string name="order_number">Order ID : </string>
    <string name="chat_with_restaurant">Chat with restaurant</string>
    <string name="payment_mode">Payment modes</string>
    <string name="setting">Settings</string>
    <string name="help">Help</string>
    <string name="restaurant_near_you">Restaurant near you</string>
    <string name="address">Address</string>
    <string name="favourite_restaurant">Favorite restaurants</string>
    <string name="create_account">Create account</string>
    <string name="login_account">Login account</string>
    <string name="select_your_gender">Select Gender</string>
    <string name="none">None</string>
    <string name="please_enter_valid_otp">Please Enter Valid OTP</string>
    <string name="sorry_u_have_not_register_with_us">Sorry,You Have Not Registered With Us</string>
    <string name="otp_max_attempt">You exceeded OTP request max attempt. Please try after some time.</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="sending_otp">Sending Otp...</string>
    <string name="in">in</string>
    <string name="mobile_number_error_message">Kindly enter a valid mobile number</string>
    <string name="pleaseFillMandatoryDetails">*Please fill mandatory fields</string>
    <string name="pleaseFillpassword">*Please Give Password</string>
    <string name="pleaseFillmobileNo">*Please Give Mobile Number</string>
    <string name="emailNotValid">Email_ID not VALID</string>
    <string name="phoneNONotValid">*Phone no Not Valid</string>
    <string name="gender_optional">Gender(Optional)</string>
    <string name="please_select_your_gender">Please select your gender</string>
    <string name="passwordContainsError">*Password Should be minimum 8 char length.</string>
    <string name="passwordNotMatched">Password not matched</string>
    <string name="please_select_terms_and_conditions">Please select terms and conditions</string>
    <string name="logingout">Logging out...</string>
    <string name="appLogoutText">Are you sure ? You want to Logout</string>
    <string name="phn_erro"> Please enter mobile number</string>
    <string name="password_error">Password Required</string>
    <string name="loggin">Logging...</string>
    <string name="loading_profile">Loading Profile</string>
    <string name="updating_profile">Updating profile...</string>
    <string name="profile_updated_success">Profile Updated Successfully</string>
    <string name="toast_image_intent_null" />
    <string name="lbl_set_profile_photo">Select image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="select_image">Select Image</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="uploading_image">Uploading image...</string>
    <string name="failed_upload_image">Failed to upload</string>
    <string name="something_went_wrong_message">Something went wrong</string>
    <string name="no_internet">No Internet</string>
    <string name="no_google_playservice_available">No google play services available</string>
    <string name="permission_rationale">Please grant location permission to start the service</string>
    <string name="emptyList">Empty List</string>
    <string name="emptyListMessage">No records to display.</string>
    <string name="no_favourite_item">"No Favourite Items Available "</string>
    <string name="no_data_show">No Data to Show</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sar">"SAR "</string>
    <string name="filter">Filters</string>
</resources>